hard-gists/7aea60f80f6aa9b79cc9509b633557c9/run.log
=== Docker Run Log for 7aea60f80f6aa9b79cc9509b633557c9 ===
Started at: Mi 29. Okt 17:26:47 CET 2025

[2025-10-29 17:26:48] START: Running container for 7aea60f80f6aa9b79cc9509b633557c9
[2025-10-29 17:26:48] SUCCESS: Container 57de1f267b000bffdd5d3ed753ad5e06a10f859a2be8a4ec3c827994e6973591 started for 7aea60f80f6aa9b79cc9509b633557c9
=== Container logs for 7aea60f80f6aa9b79cc9509b633557c9 ===
  File "/snippet.py", line 75
    print "p =", p
    ^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 7aea60f80f6aa9b79cc9509b633557c9 ===
[2025-10-29 17:26:50] INFO: Container 57de1f267b000bffdd5d3ed753ad5e06a10f859a2be8a4ec3c827994e6973591 has stopped
